# Writ

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  README.MD  Writ.hexproj
.planning/: MILESTONES.md  (+7 more)
writ-cli/: Cargo.toml
writ-cli/src/: bom_utils.rs  cli_host.rs  main.rs
writ-cli/tests/: cli_integration.rs  e2e_compile_tests.rs
writ-cli/tests/fixtures/: error_resolution.writ  hello.writ  hello.writil
writ-compiler/: Cargo.toml
writ-compiler/src/: config.rs  lib.rs
writ-compiler/src/ast/: decl.rs  expr.rs  mod.rs  stmt.rs  types.rs
writ-compiler/src/check/: check_decl.rs  check_expr.rs  check_stmt.rs  desugar.rs  env.rs  error.rs  infer.rs  ir.rs  mod.rs  mutability.rs  pattern.rs  ty.rs  unify.rs
writ-compiler/src/emit/: collect.rs  error.rs  heaps.rs  metadata.rs  mod.rs  module_builder.rs  serialize.rs  slots.rs  type_sig.rs
writ-compiler/src/lower/: context.rs  dialogue.rs  entity.rs  error.rs  expr.rs  fmt_string.rs  mod.rs  operator.rs  optional.rs  stmt.rs
writ-compiler/src/resolve/: collector.rs  def_map.rs  error.rs  ir.rs  mod.rs  prelude.rs  resolver.rs  scope.rs  suggest.rs  validate.rs
writ-compiler/tests/: emit_body_tests.rs  emit_serialize_tests.rs  emit_tests.rs  lowering_tests.rs  resolve_tests.rs  typecheck_tests.rs
writ-compiler/tests/snapshots/: lowering_tests__compound_add_assign.snap  lowering_tests__compound_div_assign.snap  lowering_tests__compound_mod_assign.snap  lowering_tests__compound_mul_assign.snap  lowering_tests__compound_sub_assign.snap  lowering_tests__concurrency_cancel_passthrough.snap  lowering_tests__concurrency_defer_passthrough.snap  lowering_tests__concurrency_detached_spawn_passthrough.snap  lowering_tests__concurrency_join_passthrough.snap  (+100 more)
writ-golden/: Cargo.toml
writ-golden/tests/: golden_tests.rs
(+464 files in other folders)
