[package]
name = "writ-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
writ-parser = { path = "../writ-parser" }
writ-diagnostics = { path = "../writ-diagnostics" }
writ-module = { path = "../writ-module" }
chumsky = { version = "0.12.0", features = ["pratt"] }
thiserror = "2.0"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
strsim = "0.11"
rustc-hash = "2.1.1"
id-arena = "2.3.0"
ena = "0.14.4"

[dev-dependencies]
insta = { version = "1", features = ["ron"] }
